--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --watch './**/*.ts' --exec ts-node src/index.ts"
+    "dev": "nodemon --watch './**/*.ts' --exec ts-node src/index.ts",
+    "generate": "ts-node ./node_modules/typeorm/cli.js migration:generate -n supermarketMigration -p"
   },
   "keywords": [],
   "author": "",
@@ -14,8 +15,12 @@
     "@types/express": "^4.17.21",
     "express": "^4.18.2",
     "mysql2": "^3.6.3",
+    "reflect-metadata": "^0.1.13",
     "ts-node": "^10.9.1",
     "typeorm": "^0.3.17",
     "typescript": "^5.2.2"
+  },
+  "devDependencies": {
+    "@types/node": "^20.9.0"
   }
 }
