Added migration:run working

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon --watch './**/*.ts' --exec ts-node src/index.ts",
-    "generate": "typeorm migration:create ./src/migrations/Test"
+    "migration:generate": "typeorm migration:create ./src/migrations/Test",
+    "migration:run": "ts-node ./node_modules/typeorm/cli.js migration:run -d ./src/data-source.ts"
   },
   "keywords": [],
   "author": "",
