--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon --watch './**/*.ts' --exec ts-node src/index.ts",
     "migration:generate": "typeorm migration:create ./src/migrations/Test",
-    "migration:run": "ts-node ./node_modules/typeorm/cli.js migration:run -d ./src/data-source.ts"
+    "migration:run": "ts-node ./node_modules/typeorm/cli.js migration:run -d ./src/data-source.ts",
+    "migration:show": "ts-node ./node_modules/typeorm/cli.js migration:show -d ./src/data-source.ts",
+    "migration:create": "ts-node ./node_modules/typeorm/cli.js migration:create -d ./src/data-source.ts",
+    "migration:revert": "ts-node ./node_modules/typeorm/cli.js migration:revert -d ./src/data-source.ts",
+    "schema:sync": "ts-node ./node_modules/typeorm/cli.js schema:sync -d ./src/data-source.ts"
   },
   "keywords": [],
   "author": "",
