--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/jsonwebtoken": "^9.0.5",
+    "bcrypt": "^5.1.1",
     "express": "^4.18.2",
+    "express-jwt": "^8.4.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.3",
     "nodemon": "^3.0.1",
